Ceremony detail changes

--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -61,4 +61,6 @@ h3 {
   color: $secondary-color;
   @include fontSize(18);
   font-family: $roboto-medium;
+  width: max-content;
+  cursor: pointer;
 }
