terms & conditions UI

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -30,6 +30,12 @@
 p {
   @include fontSize(16);
   @include letterSpacing(.3);
+  a {
+    color: inherit;
+    &:hover {
+      color: inherit;
+    }
+  }
 
 }
 
