--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -8,7 +8,7 @@
   background-color: $secondary-color;
   @include tablet {
     text-align: left;
-    @include padding(60,123,30, $important: true);
+    @include padding(60,123,0, $important: true);
   }
 
   ul {
@@ -28,10 +28,12 @@
 }
 
 p {
-  @include fontSize(16);
+  @include fontSize(17.6);
   @include letterSpacing(.3);
+
   a {
     color: inherit;
+
     &:hover {
       color: inherit;
     }
@@ -40,14 +42,12 @@ p {
 }
 
 .block {
-  @include mobile {
-    margin-bottom: 2rem;
-  }
+  margin-bottom: 2rem;
 
   p:first-child {
     font-family: $frank-bold;
     @include fontSize(18);
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 
     span {
       font-family: $roboto-regular;
