--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -101,6 +101,15 @@ a.button {
   @include padding(59.5,0);
   border-bottom: 2px solid #eee;
 
+  h2 {
+    color: $black;
+    margin-bottom: 1rem;
+  }
+
+  .pSmall {
+    color: $black;
+  }
+
   .details {
     // width: max-content;
     @include width(787);
@@ -143,7 +152,7 @@ a.button {
 }
 
 .priceNow {
-  color: $primary-color;
+  color: $tertiary-color;
   font-family: $roboto-medium;
 }
 
@@ -180,7 +189,7 @@ a.button {
   }
 
   h3 {
-    font-family: $roboto-regular;
+    font-family: $frank-regular;
     @include fontSize(30);
     @include letterSpacing(1.2);
     line-height: 1.3;
@@ -192,6 +201,7 @@ a.button {
   p {
     width: 55%;
     margin: 0 auto;
+    color: $black-five;
   }
 }
 
