--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -227,8 +227,7 @@ a.button {
     width: 100%;
     height: 35%;
     background-color: rgba(0, 0, 0, 0.7);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    @include borderRadius(0,0,18,18);
   }
 
   h4 {
@@ -313,8 +312,8 @@ a.button {
       background-color: $secondary-color;
       transform: rotate(45deg);
       position: absolute;
-      left: -4.5%;
-      top: 35%;
+      left: -1.25rem;
+      top: calc(50% - 1.25rem);
     }
   }
 
@@ -336,8 +335,8 @@ a.button {
     .handle {
       background-color: #dcd5d5;
       left: auto;
-      right: -4.5%;
-      top: 35%;
+      right: -1.25rem;
+      top: calc(50% - 1.25rem);
     }
 
     h3 {
