--- a/src/components/HorizontalSlider/horizontalSlider.scss
+++ b/src/components/HorizontalSlider/horizontalSlider.scss
@@ -32,7 +32,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-  background-color: $primary-color-25;
+  background-color: #FEF1F7;
   border: 1px dashed $secondary-color;
   // @include width(403);
   width: auto;
@@ -40,7 +40,6 @@
   @include borderRadius(18);
   @include margin(16,0);
   @include fontSize(24);
-  opacity: .3;
   color: $primary-color;
   cursor: pointer;
 }
