Api error messages in sign in popups

--- a/src/modals/signInModal/signInModal.scss
+++ b/src/modals/signInModal/signInModal.scss
@@ -54,7 +54,7 @@
 .orLine {
   display: flex;
   justify-content: space-between;
-  margin-top: 1.4rem;
+  margin-top: 1.5rem;
   font-family: $roboto-regular;
   @include fontSize(16);
   color: #535353;
@@ -159,7 +159,17 @@
 .logoWrap {
   display: flex;
   align-items: center;
-  @include margin(0,0,35)
+  @include margin(0,0,40)
+}
+
+.apiError {
+  @include fontSize(16);
+  color: $bright-red;
+  position: absolute;
+  top: 7rem;
+  &::first-letter {
+    text-transform: capitalize;
+  }
 }
 
 .image {
