--- a/src/variables/_utils.scss
+++ b/src/variables/_utils.scss
@@ -14,6 +14,9 @@ $base-font-size: 16;
 @mixin flex-column() {
   flex-direction: column;
 }
+@mixin flex-row-reverse() {
+  flex-direction: row-reverse;
+}
 @mixin align-center() {
   align-items: center;
 }
