talk modal reopening fix & modal title
fix

--- a/src/modules/products/products.scss
+++ b/src/modules/products/products.scss
@@ -234,6 +234,8 @@
   font-family: $roboto-medium;
   box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.3);
   border: none;
+  max-height: 30rem;
+  overflow-y: auto;
 
   .dropItem {
     padding: 1rem 2.5rem;
