Contact Wedding planniner click to call

--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -34,3 +34,13 @@
   color: $black-nine;
 }
 
+.apiError {
+  @include fontSize(16);
+  color: $bright-red;
+  position: absolute;
+  top: 7.5rem;
+  &::first-letter {
+    text-transform: capitalize;
+  }
+}
+
