--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -27,7 +27,8 @@ html {
 body {
   font-family: $roboto-regular;
   font-size: 16px;
-  padding: 0;
+  padding: 0 !important;
+  overflow: auto !important;
   margin: 0;
   color: $black-five;
 }
@@ -76,8 +77,11 @@ h2 {
 
   &:hover {
     color: $white;
-    background-color: $secondary-color;
     text-decoration: none;
+    background-color: #E54291;
+  }
+
+  &:active {
     background-color: #E54291;
   }
 }
