cards made responsive

--- a/src/modules/products/products.scss
+++ b/src/modules/products/products.scss
@@ -279,3 +279,11 @@
     transform: translate3d(0, 19px, 0px) !important;
   }
 }
+
+.mobileCarousal {
+  display: none;
+  @include mobile {
+    display: flex;
+    margin-top: 2rem;
+  }
+}
