--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -13,9 +13,12 @@
 .cardImage {
   width: 100%;
   @include height(250);
-  // height: 16.194rem;
   @include borderRadius(20,20,0,0);
   object-fit: cover;
+
+  @include mobile {
+    @include height(150);
+  }
 }
 
 //simple card style
@@ -25,6 +28,12 @@
   @include letterSpacing(1.8);
   color: $black-four;
   text-align: center;
+}
+
+.plainCardBody {
+  @include mobile {
+    @include padding(12,0,4);
+  }
 }
 
 // exclusive card styles
@@ -72,6 +81,24 @@
 
 // category card styles
 
+.mainContent {
+  width: 100%;
+  @include mobile {
+    width: 100%;
+  }
+}
+
+.cardbodyContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  margin-top: -0.5rem;
+
+  @include mobile {
+    flex-direction: column;
+  }
+}
+
 .categoryCard {
   @include borderRadius(20);
   @include margin(16,0,48);
@@ -85,6 +112,10 @@
   background-color: #f7f7f7;
   @include borderRadius(0,0,20,20);
   @include height(112);
+
+  @include mobile {
+    height: auto;
+  }
 }
 
 .cardTitleCat {
@@ -92,7 +123,6 @@
   font-family: $roboto-bold;
   letter-spacing: .025rem;
   color: $black-four;
-  width: 60%;
   @extend .addEllipsis;
 }
 
@@ -106,6 +136,10 @@
     font-family: $roboto-medium;
     color: $black-four;
   }
+
+  @include mobile {
+    margin-bottom: 0;
+  }
 }
 
 .ratingContainer {
@@ -115,6 +149,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+
+  @include mobile {
+    width: 100%;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .rating {
@@ -125,6 +166,10 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+
+  @include mobile {
+    justify-content: flex-start;
+  }
 
   span {
     font-family: $roboto-regular;
@@ -150,6 +195,10 @@
   width: auto;
   @include borderRadius(18,18,0,0);
   object-fit: cover;
+
+  @include mobile {
+    @include height(150);
+  }
 }
 
 .compareMask {
