--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -492,3 +492,11 @@ a.button {
   height: auto;
   width: 100%;
 }
+
+// mobile specific - plaincard
+
+.plainCardContainer {
+  min-width: 41%;
+  width: 41%;
+  margin-right: 1.2rem;
+}
