--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -40,3 +40,4 @@ $secondary-color: #6d2158;
 $tertiary-color: #da2128;
 $primary-color-25: rgba(238, 77, 155, 0.25);
 $warm-grey-eight: #6c6c6c;
+$greyish-brown-four: #534d4d;
