bug fixes in talk to ahwanam

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -163,7 +163,7 @@
   }
 
   .input-password-mask {
-		background: center url('/images/filter-dropdown.png') no-repeat;
+		background: center url('/images/info.svg') no-repeat;
 		background-size: contain;
 		position: absolute;
 		right: 0;
